<resources>
    <string name="app_name">Home Driven App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string-array name="array_name">
        <item>Array Item One</item>
        <item>Array Item Two</item>
        <item>Array Item Three</item>
    </string-array>
    <string name="menu_home">Home</string>
    <string name="ic_contact">Contact Us</string>
    <string name="menu_order">Order</string>
    <string name="menu_service_provider">Service Provider</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_ic_info">About Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="login_form">Login Form</string>
    <string name="ic_playlist_add">Add New Product</string>
</resources>